# docs/swagger.yaml
@@ -1,5 +1,17 @@
 basePath: /
 definitions:
+  model.UserRegister:
+    properties:
+      confirm_password:
+        type: string
+      email:
+        example: google@gmail.com
+        type: string
+      password:
+        type: string
+      verify_code:
+        type: string
+    type: object
   response.Response:
     properties:
       data:
@@ -37,6 +49,30 @@ paths:
           schema:
             $ref: '#/definitions/response.Response'
       summary: 用户列表
+      tags:
+      - 用户相关
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 用户注册
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/model.UserRegister'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: 用户注册
       tags:
       - 用户相关
   /api/v1/users/{id}:
